force-app/main/default/objects/Invoice_Line__c/Invoice_Line__c.object-meta.xml
<CustomObject>
    <description>Line item on an invoice (typically one per billed Time Entry). Amount rolls up to the Invoice Subtotal.</description>
    <label>Invoice Line</label>
    <nameField>
        <displayFormat>IL-{000000}</displayFormat>
        <label>Invoice Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>