force-app/main/default/objects/Invoice_Line__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <label>Amount</label>
    <type>Currency</type>
    <formula>Hours__c * Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <precision>16</precision>
    <scale>2</scale>
    <description>Line amount (Hours x Rate). Rolls up to the Invoice Subtotal.</description>
</CustomField>