force-app/main/default/objects/Invoice_Line__c/fields/Days__c.field-meta.xml
<CustomField>
    <fullName>Days__c</fullName>
    <label>Days</label>
    <type>Number</type>
    <formula>Service_End_Date__c - Service_Start_Date__c + 1</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <precision>4</precision>
    <scale>0</scale>
    <description>Number of calendar days in the service period (inclusive of start and end).</description>
</CustomField>