force-app/main/default/objects/Invoice_Line__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <type>Text</type>
    <length>255</length>
    <description>Line description shown on the invoice.</description>
</CustomField>