force-app/main/default/objects/Invoice_Line__c/fields/Hours__c.field-meta.xml
<CustomField>
    <fullName>Hours__c</fullName>
    <label>Hours</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>2</scale>
    <description>Quantity of hours billed on this line.</description>
</CustomField>