force-app/main/default/objects/Invoice_Line__c/fields/Rate__c.field-meta.xml
<CustomField>
    <fullName>Rate__c</fullName>
    <label>Rate</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
    <description>Hourly rate billed on this line.</description>
</CustomField>