force-app/main/default/objects/Invoice_Line__c/fields/Service_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_End_Date__c</fullName>
    <label>Service End Date</label>
    <type>Date</type>
    <description>Last day of work for this line (from the source Time Entry's End Date).</description>
</CustomField>