force-app/main/default/objects/Invoice_Line__c/fields/Service_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Start_Date__c</fullName>
    <label>Service Start Date</label>
    <type>Date</type>
    <description>First day of work for this line (from the source Time Entry's Start Date).</description>
</CustomField>