force-app/main/default/objects/Invoice_Line__c/fields/Time_Entry__c.field-meta.xml
<CustomField>
    <fullName>Time_Entry__c</fullName>
    <label>Time Entry</label>
    <type>Lookup</type>
    <referenceTo>Time_Entry__c</referenceTo>
    <relationshipLabel>Invoice Lines</relationshipLabel>
    <relationshipName>Invoice_Lines</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Source time entry this line was generated from (null for manual lines).</description>
</CustomField>